--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   neo4j:
-    image: neo4j
+    image: neo4j:enterprise
     container_name: neo4j
     restart: unless-stopped
     ports:
@@ -18,6 +18,7 @@ services:
       - NEO4J_dbms_memory_pagecache_size=2G
       - NEO4J_dbms.memory.heap.initial_size=2G
       - NEO4J_dbms_memory_heap_max__size=2G
+      - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
   cassandra:
     image: cassandra   # better to use a specific version, if you want to control upgrades
     container_name: cassandra
