--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,25 +13,25 @@ services:
     environment:
       SA_PASSWORD: "change_this_password"
       ACCEPT_EULA: "Y"
-#  neo4j:
-#    image: neo4j:enterprise
-#    container_name: neo4j
-#    restart: unless-stopped
-#    ports:
-#      - 7474:7474
-#      - 7687:7687
-#    volumes:
-#      - ./db-neo4j/conf:/conf
-#      - ./db-neo4j/data:/data
-#      - ./db-neo4j/import:/import
-#      - ./db-neo4j/logs:/logs
-#      - ./db-neo4j/plugins:/plugins
-#    environment:
-#      # Raise memory limits
-#      - NEO4J_dbms_memory_pagecache_size=2G
-#      - NEO4J_dbms.memory.heap.initial_size=2G
-#      - NEO4J_dbms_memory_heap_max__size=2G
-#      - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
+  neo4j:
+    image: neo4j:enterprise
+    container_name: neo4j
+    restart: unless-stopped
+    ports:
+      - 7474:7474
+      - 7687:7687
+    volumes:
+      - ./db-neo4j/conf:/conf
+      - ./db-neo4j/data:/data
+      - ./db-neo4j/import:/import
+      - ./db-neo4j/logs:/logs
+      - ./db-neo4j/plugins:/plugins
+    environment:
+      # Raise memory limits
+      - NEO4J_dbms_memory_pagecache_size=2G
+      - NEO4J_dbms.memory.heap.initial_size=2G
+      - NEO4J_dbms_memory_heap_max__size=2G
+      - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
 #  cassandra:
 #    image: cassandra   # better to use a specific version, if you want to control upgrades
 #    container_name: cassandra
